# EcoScout---AI-Ecologist

./: .gcloudignore  .gitignore  Dockerfile  README.md  TUNNEL_GUIDE.md  cloudbuild.yaml  cors.json  deploy.ps1  deploy.sh  gcs-cors.json  pyproject.toml
app/: .env.example  gen_cert.py  main.py
app/certs/: cert.pem  key.pem
app/ecoscout_agent/: __init__.py  agent.py  tools.py
app/static/: index.html  manifest.json
app/static/css/: style.css
app/static/js/: app.js  audio-recorder.js  ecology-viz.js
docs/: AUTH_GUIDE.md  DEPLOYMENT_PLAN.md  ENV_AND_IAM.md  architecture-components.md  architecture-diagram.html  architecture-presentation.html  architecture-system.md  devpost-description.md
scripts/: test_ecological_tools.py  test_gemini_live_connection.py  test_text_ws.py  test_video_generation.py  test_video_ws.py
tests/: conftest.py  test_agent.py  test_app.py  test_config.py  test_tools.py
